# aeroplanets

./: .gitignore  CMakeLists.txt  DifferentConfigurations  Doxyfile  Makefile.am  README  README.md  aclocal.m4  meson.build  prepare_conf.sh  setup.cfg  setup.cmake  setup.py
.github/workflows/: ci_cmake.yml  ci_linux.yml  ci_mac.yml
aeroplanets/: __init__.py  builder.py  plots.py  venus.py
autoconf/: README.md  aclocal.m4  configure.ac
autoconf/m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
cmake/: compilers.cmake
data/: AuroraMars.xml
data/Anonymous/: AnonymousTitan.xml
data/CrossSections/: ElectronCH4.xml  ElectronCO.xml  ElectronCO2.xml  ElectronH.xml  ElectronH2.xml  ElectronHe.xml  ElectronN2.xml  ElectronO.xml  ElectronO2.xml  HydrogenCO2.xml  HydrogenN2.xml  HydrogenO.xml  HydrogenO2.xml  PhotH2.xml  PhotHe.xml  PhotRecommendedCH4.xml  PhotRecommendedCO.xml  PhotRecommendedCO2.xml  PhotRecommendedH.xml  PhotRecommendedH2O.xml  PhotRecommendedN2.xml  PhotRecommendedO.xml  PhotRecommendedO2.xml  PhotRecommendedOH.xml  ProtonCO2.xml  ProtonN2.xml  ProtonO.xml  ProtonO2.xml  electronimpactionization.xml  init_species.xml  init_species_opal.xml  photoionisation.xml
data/Earth/: AuroraEarthFairbanks.xml  Log.txt
m4/: ax_debug.m4
src/: CMakeLists.txt  Makefile.am  config.h  meson.build
src/atmo/: CMakeLists.txt  Makefile.am  README  atmo.cpp  atmo.hpp  meson.build  neutralatmo.cpp  neutralatmo.hpp  test.cpp
src/atmo/test/: column.out  column2.out  column3.out  emission_list.out  init_species.xml  spectrum.out  test.xml
src/atmo/test/crs/: eleconespectest.xml  electronimpactionization.xml  electronimpactsimple.xml  photoionisation.xml
src/chem/: CMakeLists.txt  Makefile.am  calcdens.cpp  calcdens.hpp  chem.cpp  chem.hpp  documentation.hpp  meson.build  reaclist.cpp  reaclist.hpp  reaction.cpp  reaction.hpp  test.cpp
src/chemsimu/: Makefile.am  main.cpp  main.hpp
src/computebranchphot/: Makefile.am  documentation.hpp  main.cpp  main.hpp  photodissocaero
src/cppscixml/: CMakeLists.txt  Makefile.am  README  TestLog.txt  documentation.hpp  error.hpp  meson.build  scixml.cpp  scixml.hpp  test.cpp  test.xml  test2.xml  test3.xml  test4.xml
src/eflux/: Makefile.am  eflux.cpp  eflux.hpp
src/eflux/test/: test.cpp  test.xml
src/elecimpact/: CMakeLists.txt  Makefile.am  electronionization.cpp  electronionization.hpp  meson.build
src/elecimpact/fortran/: disort.f  linsub.f
src/elecimpact/test/: test.cpp  test.xml
src/emit/: CMakeLists.txt  Makefile.am  emission.cpp  emission.hpp  emit.cpp  emit.hpp  emitlist.cpp  emitlist.hpp  meson.build  test.cpp
src/leastsq/: Makefile.am  SuperLog.txt  least.cpp  least.hpp
src/leastsq/test/: test.cpp
src/main/: Makefile.am  documentation.hpp  main.cpp  main.hpp  timeline.hpp
src/math/: CMakeLists.txt  Makefile.am  chapman.cpp  chapman.hpp  constphys.hpp  logging.cpp  logging.hpp  mathflux.cpp  mathflux.hpp  mathfunction.cpp  mathfunction.hpp  mathrandom.cpp  mathrandom.hpp  mathstring.cpp  mathstring.hpp  meson.build  umathfunction.cpp  umathfunction.hpp
src/math/test/: test.cpp
src/minpack/: Makefile.am  covar.c  dogleg.c  qrfac.c  r1updt.c
src/observ/: CMakeLists.txt  CmakeLists.txt  Makefile.am  documentation.hpp  geoobs.cpp  geoobs.hpp  geopath.cpp  geopath.hpp  geopoint.cpp  geopoint.hpp  meson.build  test.cpp
src/paramfitting/: Makefile.am  adjust.cpp  adjust.hpp  howtoaddanewfunction.txt  paramfit.cpp  paramfit.hpp  runlsq.cpp  runlsq.hpp
src/paramfitting/test/: aerotest.xml  test.xml  testautre.xml
src/phflux/: Makefile.am  phflux.cpp  phflux.hpp
src/phflux/test/: test.cpp
src/photo/: CMakeLists.txt  Makefile.am  documentation.hpp  flux_model.cpp  flux_model.hpp  lines.cpp  lines.hpp  meson.build  photoionization.cpp  photoionization.hpp  test.cpp
src/photo/test/: test.xml
src/planet/: CMakeLists.txt  Makefile.am  allplanets.hpp  anonym.cpp  anonym.hpp  earth.cpp  earth.hpp  mars.cpp  mars.hpp  meson.build  planet.cpp  planet.hpp  test.cpp  titan.cpp  titan.hpp  venus.cpp  venus.hpp
src/planet/Earth/: cira86_pour_iri12.f  irif12.f  irimsis.cpp  irimsis.hpp  iris12.f  msis90.f
src/planet/Mars/: datamarinerviking.cpp  datamarinerviking.hpp  marsatmotim.cpp  marsatmotim.hpp  marsbinary.cpp  marsbinary.hpp
src/planet/Titan/: titandata.cpp  titandata.hpp
src/planet/Venus/: README.txt  pvatmos.f  venssubs_V05.f
src/planet/Venus/archive/: pvatmos.for
src/planet/test/: test.xml
src/proton/: Makefile.am  proton.cpp  proton.hpp
src/proton/fortran/: dgphiv.f  expogk.f
src/proton/test/: test.cpp
src/protoncosmics/: Makefile.am  protocos.cpp  protocos.hpp
src/protoncosmics/test/: ResultatCosmique.xml  test.cpp  test.xml
src/species/: CMakeLists.txt  Makefile.am  comparison_transfortran.xml  crs.cpp  crs.hpp  crs_test.xml  documentation.hpp  eleccrs.cpp  eleccrs.hpp  eleccrs_test.xml  eleconespectest.xml  meson.build  path.cpp  path.hpp  protoncrs.cpp  protoncrs.hpp  shirai.cpp  shirai.hpp  specie_test.xml  species.cpp  species.hpp  test.cpp
src/tinyxml/: Makefile.am  tinyxml.h  tinyxmlparser.cpp
src/tinyxpath/: AUTHORS  CMakeLists.txt  Makefile.am  lex_util.cpp  meson.build  node_set.cpp  tinystr.cpp  tinystr.h  tinyxml.h  xpath_expression.cpp  xpath_expression.h  xpath_processor.cpp  xpath_stream.h  xpath_syntax.cpp
utiles/: Makefile.am  analyse_MC_inversion.py  launch_analysis.py  launchxmlaero.py  nmfluxtoaero  nooutputanalysefit.py  paires_to_resultat.py  plotflim.py  plotte  readuncertspline.py  seff.py
utiles/doublecolor_analysis/: create_launchfile.py
utiles/montecarlo/: nooutputanalysemedian.py  plottemcmedian
utils/: Plot.py  Venus_AltitudeProfile.py  Venus_LatitudeProfile.py  Venus_TimeProfile.py  analyse_MC_inversion.py  create_launchfile.py  crsfiletomc.py  eigenvals.py  launch_analysis.py  launchfile_alacigri.py  launchxmlaero.py  nmfluxtoaero  nooutputanalyse_cuterr.py  nooutputanalysefit.py  paires_to_resultat.py  plotflim.py  powerlaw.py  readuncertspline.py  seff.py
utils/doublecolor_analysis/: Readme  powerlaw.py  (+2 more)
(+51 files in other folders)
