[metadata]
name = aeroplanets
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
description = 1-D ionosphere particle penetration simulation
url = https://github.com/scivision/aeroplanets
keywords =
  ionosphere
  aurora
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy >= 1.16
  xarray

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  seaborn
  matplotlib >= 2.1

[options.entry_points]
console_scripts =
