INCLUDES = -I@top_srcdir@
lib_LTLIBRARIES = libminpack.la
libminpack_la_SOURCES = chkder.c covar.c dogleg.c dpmpar.c enorm.c fdjac1.c fdjac2.c hybrd1.c hybrd.c hybrj1.c hybrj.c lmder1.c lmder.c lmdif1.c lmdif.c lmpar.c lmstr1.c lmstr.c qform.c qrfac.c qrsolv.c r1mpyq.c r1updt.c rwupdt.c cminpack.h
libminpack_la_LDFLAGS = -no-undefined



