INCLUDES=-I@top_srcdir@ -I@top_srcdir@/src
bin_PROGRAMS=aerofitparam
aerofitparam_SOURCES= paramfit.cpp paramfit.hpp adjust.cpp adjust.hpp runlsq.cpp runlsq.hpp
##aerofitparam_LDFLAGS=@BOOST_LDFLAGS@ -lboost_system $(FLIBS) ../math/libmathstring.la  ../tinyxpath/libtinyxpath.la ../cppscixml/libscixml.la ../species/libspecies.la ../eflux/libeflux.la ../photo/libphoto.la  ../planet/libplanet.la ../atmo/libatmo.la ../elecimpact/libelecimpact.la ../phflux/libphflux.la  ../proton/libprotimpact.la ../protoncosmics/libprotoncosmics.la  ../chem/libchem.la ../observ/libobserv.la ../emit/libemit.la ../minpack/libminpack.la ../leastsq/liblsq.la
aerofitparam_LDFLAGS=@BOOST_LDFLAGS@  @BOOST_SYSTEM_LIB@ $(FLIBS) ../math/libmathstring.la  ../tinyxpath/libtinyxpath.la ../cppscixml/libscixml.la ../species/libspecies.la ../eflux/libeflux.la ../photo/libphoto.la  ../planet/libplanet.la ../atmo/libatmo.la ../elecimpact/libelecimpact.la ../phflux/libphflux.la  ../proton/libprotimpact.la ../protoncosmics/libprotoncosmics.la  ../chem/libchem.la ../observ/libobserv.la ../emit/libemit.la ../minpack/libminpack.la ../leastsq/liblsq.la



