INCLUDES=-I@top_srcdir@
lib_LTLIBRARIES=libtinyxpath.la
libtinyxpath_la_SOURCES= action_store.cpp action_store.h byte_stream.h lex_token.h lex_util.cpp lex_util.h node_set.cpp node_set.h tinystr.cpp tinystr.h tinyxml.cpp tinyxmlerror.cpp tinyxml.h tinyxmlparser.cpp tinyxpath_conf.h tokenlist.cpp tokenlist.h xml_util.cpp xml_util.h xpath_expression.cpp xpath_expression.h xpath_processor.cpp xpath_processor.h xpath_stack.cpp xpath_stack.h xpath_static.cpp xpath_static.h xpath_stream.cpp xpath_stream.h xpath_syntax.cpp xpath_syntax.h
libtinyxpath_la_LDFLAGS=--no-undefined
EXTRA_DIST=AUTHORS

